Javascript sleep should always emit an error when interrupted

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.6.10, 4.0.0-rc1, 4.1.1
    • Affects Version/s: None
    • Component/s: JavaScript
    • None
    • Fully Compatible
    • ALL
    • v4.0, v3.6
    • Platforms 2018-05-21, Platforms 2018-06-04
    • 11
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If a Javascript operation is interrupted while sleeping, it should not be possible for the sleep to be interrupted and the script to complete without an error. Instead, the script should terminate with an error.

            Assignee:
            Spencer Jackson
            Reporter:
            Spencer Jackson
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: