SERVER-35061: Javascript sleep should error on premature wake

(cherry picked from commit ae8f7d8160aef246ea4c31169d42865fc55e98c3)