src/mongo/scripting/mozjs/exception.cpp
@@ -52,11 +52,6 @@ const JSErrorFormatString* errorCallback(void* data, const unsigned code) {
     return &kErrorFormatString;
 }
 
-JSErrorFormatString kUncatchableErrorFormatString = {"{0}", 1, JSEXN_NONE};
-const JSErrorFormatString* uncatchableErrorCallback(void* data, const unsigned code) {
-    return &kUncatchableErrorFormatString;
-}
-
 MONGO_STATIC_ASSERT_MSG(
     UINT_MAX - JSErr_Limit > ErrorCodes::MaxError,
     "Not enough space in an unsigned int for Mongo ErrorCodes and JSErrorNumbers");
@@ -66,18 +61,15 @@ MONGO_STATIC_ASSERT_MSG(
 void mongoToJSException(JSContext* cx) {
     auto status = exceptionToStatus();
 
-    auto callback =
-        status.code() == ErrorCodes::JSUncatchableError ? uncatchableErrorCallback : errorCallback;
-
-    JS_ReportErrorNumber(
-        cx, callback, nullptr, JSErr_Limit + status.code(), status.reason().c_str());
-}
-
-void setJSException(JSContext* cx, ErrorCodes::Error code, StringData sd) {
-    auto callback =
-        code == ErrorCodes::JSUncatchableError ? uncatchableErrorCallback : errorCallback;
-
-    JS_ReportErrorNumber(cx, callback, nullptr, JSErr_Limit + code, sd.rawData());
+    if (status.code() != ErrorCodes::JSUncatchableError) {
+        JS_ReportErrorNumber(
+            cx, errorCallback, nullptr, JSErr_Limit + status.code(), status.reason().c_str());
+    } else {
+        // If a JSAPI callback returns false without setting a pending exception, SpiderMonkey will
+        // treat it as an uncatchable error.
+        auto scope = getScope(cx);
+        scope->setStatus(status);
+    }
 }
 
 std::string currentJSStackToString(JSContext* cx) {
